--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,12 @@
     font-family: sans-serif;   
 }
 
+h5 {
+    font-size: 16px;
+    margin: 0;
+    margin-bottom: 16px;
+}
+
 main {
     display: flex;
     flex-direction: row;
@@ -51,13 +57,10 @@ main {
 }
 
 .map-area-name {
-    font-size: 16px;
-    margin: 0;
-    margin-bottom: 16px;
     text-align: center;
 }
 
-.dinfo h5 {
+.dinfo h3 {
     font-size: 24px;
     text-align: center;
     margin: 16px;
@@ -78,5 +81,22 @@ main {
     & .votes {
         width: 64px;
     }
+}
 
+.dinfo h5 {
+    margin-top: 16px;
+    margin-bottom: 8px;
+}
+
+.dinfo-list-votes {
+    display: flex;
+    
+    & .party {
+        flex-grow: 1;
+        margin-right: 8px;
+    }
+
+    & .votes {
+        width: 64px;
+    }
 }
