--- a/style.scss
+++ b/style.scss
@@ -61,6 +61,9 @@ main {
     text-align: center;
 }
 
+.dinfo {
+    width: 512px;
+}
 .dinfo h3 {
     font-size: 24px;
     text-align: center;
@@ -69,6 +72,9 @@ main {
 
 .dinfo-candidate {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 8px;
 
     & .name {
         flex-grow: 1;
@@ -81,6 +87,7 @@ main {
 
     & .votes {
         width: 64px;
+        text-align: right;
     }
 }
 
@@ -91,7 +98,10 @@ main {
 
 .dinfo-list-votes {
     display: flex;
-    
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 8px;
+
     & .party {
         flex-grow: 1;
         margin-right: 8px;
@@ -99,7 +109,26 @@ main {
 
     & .votes {
         width: 64px;
+        text-align: right;
     }
+}
+
+.dinfo-list-other {
+    .dinfo-list-votes:first-child {
+        .party {
+            color: #aaa;
+        }
+    }
+
+    .dinfo-list-votes:not(:first-child) {
+        display: none;
+        margin-left: 32px;
+    }
+
+    &:hover .dinfo-list-votes {
+        display: flex;
+    }
+
 }
 
 .parliament-container {
